Fix text alignment for .pagename class

--- a/main.css
+++ b/main.css
@@ -19,8 +19,7 @@ margin: 0 auto;}
 
 .pagename {
 font-size: 40px;
-text-align: center;
-font-weight: bold;}
+text-align: center;}
 
 .command {
 font-size: 24px;
